# architect_robot

./: .travis.yml  README.md  dependencies.rosinstall  fourth_robot.rosinstall
architect_2dnav_gazebo/: CMakeLists.txt  package.xml
architect_bringup/: CMakeLists.txt  package.xml
architect_bringup/launch/: 2dmapping.launch  bringup_all.launch  bringup_nav.launch  radio_control.launch  waypoint_navigator.launch
architect_bringup/launch/joy/: joy_control.launch
architect_bringup/launch/robot/: driver.launch
architect_bringup/launch/sensors/: camera.launch  gim30.launch  imu.launch  lrf.launch
architect_bringup/waypoints/tsukuba2017/: 2017-11-04-11-38-50.csv  2017-11-04-12-40-10.csv  tc2017_with_pede.csv  tc2017_without_pede_ver2.csv
architect_bringup/waypoints/tsukuba_kenshu_center/: kaeri.csv
architect_control/: CMakeLists.txt  package.xml
architect_control/config/: controller.yaml
architect_control/launch/: architect_control.launch
architect_description/: CMakeLists.txt  package.xml
architect_description/launch/: architect_description.launch
architect_description/meshes/STL/base/: Architect_assem.stl  Architect_assem_appearance.stl.old  Architect_assem_collision.stl.old
architect_description/robots/: architect.urdf.xacro
architect_description/urdf/base/: base.urdf.xacro
architect_description/urdf/sensors/gim30/: gim30.urdf.xacro
architect_description/urdf/sensors/gps/: gps.urdf.xacro
architect_description/urdf/sensors/lrf/: lrf.urdf.xacro
architect_description/urdf/sensors/stereo_camera/: stereo_camera.urdf.xacro
architect_description/urdf/wheel/: follow_wheel.gazebo.xacro  follow_wheel.urdf.xacro  wheel.urdf.xacro
architect_driver/: CMakeLists.txt  package.xml
architect_driver/config/: property.yaml
architect_driver/include/architect_driver/: architect_driver_node.hpp
architect_driver/include/iMCs01_driver/: urbtc.c  urobotc.h
architect_driver/launch/: architect_driver.launch
architect_driver/motor_control/Control/Left/result/: I_P_control_result_151017_21_05.csv
architect_driver/motor_control/Identify/Left/matlab/: Identify_left.mat  Identify_model_left.slx
architect_driver/motor_control/step_response/Right/: 15-10-13-04:13-step-right.csv
architect_driver/script/: module.sh
architect_driver/src/: architect_driver_node.cpp  architect_driver_node_wrapper.cpp
architect_gazebo/: CMakeLists.txt  package.xml
architect_gazebo/config/joy/: architect.yaml
architect_gazebo/launch/: architect_with_empty_world.launch  husky_playworld.launch  plan_test.launch  robotrace_cource.launch  robotrace_ps3.launch
architect_gazebo/launch/joy/: joy_control.launch
architect_gazebo/robotrace_plane/: model.config  model.sdf
architect_gazebo/robotrace_plane/materials/scripts/: robotrace.material
architect_gazebo/worlds/: robotrace_course.world
architect_slam/: CMakeLists.txt  package.xml
architect_slam/config/: architect_2d.lua
architect_slam/config/rviz/: gmapping.rviz  google2d.rviz
architect_slam/launch/: gmapping.launch  google2d_imu.launch
fourth_robot_bingup/: package.xml
fourth_robot_bringup/: CMakeLists.txt  package.xml
fourth_robot_bringup/config/joy/: fourth_robot.yaml
fourth_robot_bringup/config/rviz/: 2dmapping.rviz
fourth_robot_bringup/config/sensors/: camera_common.yaml
fourth_robot_bringup/launch/: 2dmapping.launch  bringup_all.launch  bringup_nav.launch  radio_control.launch  waypoint_navigator.launch
fourth_robot_bringup/launch/joy/: joy_control.launch
fourth_robot_bringup/launch/robot/: driver.launch
fourth_robot_bringup/launch/sensors/: camera.launch  gim30.launch  lrf.launch  lrf_merger.launch
fourth_robot_bringup/waypoints/tsukuba2017/: 2017-11-04-09-58-29.csv  2017-11-04-10-49-32.csv  2017-11-04-12-21-05.csv  tc2017_without_pede.csv
fourth_robot_bringup/waypoints/tsukuba_kenshu_center/: iki.csv  kaeri.csv
fourth_robot_description/: CMakeLists.txt  package.xml
fourth_robot_description/launch/: fourth_robot_description.launch
fourth_robot_description/meshes/DAE/: front_lrf.dae  gim30.dae  gps.dae  rear_lrf.dae  wheel.dae
fourth_robot_description/meshes/STL/: front_lrf.stl  gim30.stl  gps.stl  rear_lrf.stl  wheel.stl
fourth_robot_description/meshes/STL/base/: Architect_assem2.stl  Architect_assem_appearance.stl  Architect_assem_collision.stl  Architect_assem_collision.stl.old2  base_link.stl
fourth_robot_description/robots/: fourth_robot.urdf.xacro
fourth_robot_description/rviz/: fourth_robot_description.rviz
fourth_robot_description/urdf/: fourth_robot.urdf
fourth_robot_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
fourth_robot_description/urdf/sensors/gim30/: gim30.urdf.xacro
fourth_robot_description/urdf/sensors/gps/: gps.urdf.xacro
fourth_robot_description/urdf/sensors/lrf/: lrf.gazebo.xacro  lrf.urdf.xacro
fourth_robot_description/urdf/sensors/stereo_camera/: stereo_camera.gazebo.xacro  stereo_camera.urdf.xacro
fourth_robot_description/urdf/wheel/: follow_wheel.urdf.xacro  wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
fourth_robot_driver/: CMakeLists.txt  package.xml
fourth_robot_driver/config/: control.yaml  iMCs01.yaml  kinematics.yaml
fourth_robot_driver/include/fourth_robot_driver/: fourth_robot_driver_node.hpp
fourth_robot_driver/include/iMCs01_driver/: .gitignore  urbtc.c
fourth_robot_driver/launch/: fourth_robot_driver.launch
fourth_robot_driver/motor_control/Identify/Left/data/: step_responce_151017_19_39.csv
fourth_robot_driver/motor_control/Identify/Left/matlab/: Identify_left.m
fourth_robot_driver/script/: module.bash
fourth_robot_driver/src/: fourth_robot_driver_node.cpp  fourth_robot_driver_node_wrapper.cpp
fourth_robot_launch/: CMakeLists.txt  package.xml
fourth_robot_launch/launch/: joy_control.launch  start_front_lrf.launch  start_gim30.launch
fourth_robot_slam/: CMakeLists.txt  package.xml
fourth_robot_slam/config/: fourth_robot_2d_imu.lua  fourth_robot_2d_imu_odom.lua  fourth_robot_2d_odom.lua
fourth_robot_slam/launch/: gmapping.launch  google2d_imu.launch
materials/: 無題 1.ods  (+1 more)
(+93 files in other folders)
