<?xml version="1.0"?>
<package>
  <name>architect_bringup</name>
  <version>1.0.0</version>
  <description>The architect_bring package</description>

  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/TC2015</url>
  
  <author email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joy_twist</run_depend>
  <run_depend>gim30</run_depend>
  <run_depend>rt_usb_9axisimu_driver</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>ira_laser_tools</run_depend>
  <run_depend>ira_laser_tools</run_depend>
  <run_depend>architect_driver</run_depend>
  <run_depend>cirkit_waypoint_manager</run_depend>

</package>
