<?xml version="1.0"?>
<package>
  <name>architect_control</name>
  <version>1.0.0</version>
  <description>The architect_control package</description>


  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/CIR-KIT/architect_pkg</url>
  
  <author email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</author>

  <buildtool_depend>catkin</buildtool_depend>  
  <run_depend>controller_manager</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
