<?xml version="1.0"?>
<package>
  <name>architect_description</name>
  <version>2.0.0</version>
  <description>The architect_description package</description>

  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/CIR-KIT/architect_pkg</url>
  
  <author email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  
</package>
