<?xml version="1.0"?>
<package>
  <name>architect_gazebo</name>
  <version>1.0.0</version>
  <description>The architect_gazebo package</description>

  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/CIR-KIT/architect_pkg</url>
  
  <author email="virtualgimbal@xa2.so-net.ne.jp">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>architect_control</run_depend>
</package>
